--- a/Frontend/src/app/pages/home/stages/evalution-view/evalution-view.component.scss
+++ b/Frontend/src/app/pages/home/stages/evalution-view/evalution-view.component.scss
@@ -41,73 +41,7 @@ $primary-color: mat.get-theme-color(styles.$frontend-theme, primary, 500);
             }
         }
 
-        .result-box {
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-            justify-content: stretch;
-            margin-top: 10px;
-            padding: 0;
-
-            border-radius: 5px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-
-            &__header {
-                padding: 10px;
-                border-top-left-radius: 5px;
-                border-top-right-radius: 5px;
-                border-bottom: 2px solid #a8a8a8;
-
-                display: grid;
-                grid-template-columns: 1fr auto 1fr;
-                align-items: center;
-
-                color: var(--color-foreground-header2);
-                // color: $primary-color;
-
-                >.mat-icon{
-                    grid-column: 1;
-                    justify-self: left;
-                    margin-left: 2px;
-                }
-
-                >.result-box__title{
-                    grid-column: 2;
-                    font-weight: 500;
-                }
-            }
-
-            &__main {
-                border-bottom-left-radius: 5px;
-                border-bottom-right-radius: 5px;
-            }
-
-            &.input{
-                .result-box__main {
-                    ul li span.prop {
-                        font-weight: 500;
-                        display: inline-block;
-                        width: 76px;
-                        color: rgb(80, 80, 80);
-                    }
-                }
-            }
-
-            &:not(.input){
-                ul {
-                    list-style: none;
-                    padding: 0;
-
-                    li{
-                        margin: 0;
-                        text-align: center;
-
-                        // span{
-                        // }
-                    }
-                }
-            }
-        }
+        
     }
 
     &__panel {
@@ -122,6 +56,101 @@ $primary-color: mat.get-theme-color(styles.$frontend-theme, primary, 500);
         grid-column: 2;
         grid-row: 1 / span 2;
 
+        $panel-height: 200px;
+        grid-template-rows: 1fr $panel-height $panel-height 1fr;
+        grid-column: 1fr 1fr;
+        gap: 10px;
+
+        .result-box {
+            &.input{
+                grid-row: 2 / 4;
+                grid-column: 1;
+            }
+            &.capacity{
+                grid-row: 2;
+                grid-column: 2;
+            }
+            &.remain-life{
+                grid-row: 3;
+                grid-column: 2;
+            }
+        }
+
+        .result-box {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            justify-content: stretch;
+            // margin-top: 10px;
+            padding: 0;
+
+            border-radius: 5px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+
+            &__header {
+                padding: 10px;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+                border-bottom: 2px solid #a8a8a8;
+
+                display: grid;
+                grid-template-columns: 26px 1fr;
+                align-items: center;
+
+                color: var(--color-foreground-header2);
+                // color: $primary-color;
+
+                >.mat-icon{
+                    grid-column: 1;
+                    justify-self: left;
+                    margin-left: 2px;
+                }
+
+                >.result-box__title{
+                    grid-column: 2;
+                    font-weight: 500;
+                    text-align: center;
+                }
+            }
+
+            &__main {
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+
+                font-size: 16px;
+            }
+
+            &.input{
+                .result-box__main {
+                    ul li {
+                        margin-top: 6px;
+
+                        span.prop {
+                            font-weight: 500;
+                            display: inline-block;
+                            width: 86px;
+                            color: rgb(80, 80, 80);
+                        }
+                    }
+                }
+            }
+
+            &:not(.input){
+                ul {
+                    list-style: none;
+                    padding: 0;
+                    margin-top: 64px;
+
+                    li{
+                        margin: 0;
+                        text-align: center;
+
+                        // span{
+                        // }
+                    }
+                }
+            }
+        }
         
     }
 
