--- a/Frontend/src/app/pages/home/stages/prediction-view/prediction-view.component.scss
+++ b/Frontend/src/app/pages/home/stages/prediction-view/prediction-view.component.scss
@@ -23,6 +23,36 @@
         p {
             text-align: justify;
         }
+
+        .mat-icon {
+            font-size: 22px;
+            height: 22px;
+            width: 22px;
+
+            &.pending {
+                color: #969696;
+            }
+
+            &.done {
+                color: #039f51;
+            }
+
+            &.error {
+                color: #ff0000;
+                font-weight: 500;
+            }
+
+            &.processing {
+                color: #3f51b5;
+                font-weight: 500;
+            }
+        }
+
+        ul {
+            li{
+                margin-top: 6px;
+            }
+        }
     }
 
     &__panel {
