--- a/Frontend/src/app/pages/home/stages/choose-supervised/choose-supervised.component.html
+++ b/Frontend/src/app/pages/home/stages/choose-supervised/choose-supervised.component.html
@@ -1,7 +1,7 @@
 <div class="choose-supervised">
     <div class="choose-supervised__description">
         <h1>
-            Chọn tập giám sát từ 124 pin Lithium-Ion
+            Chọn bộ dữ liệu học từ 124 pin Lithium-Ion
         </h1>
         <p>
             Những chu kì của những pin được chọn trên 124 pin Lithium-Ion sẽ được sử dụng để làm tập giám sát cho mô
